[FIX][UI] Secondary legend size on admin pages was too large.

--- a/themes/base_files/scss/_tiki-variables.scss
+++ b/themes/base_files/scss/_tiki-variables.scss
@@ -96,7 +96,7 @@ $modal-link-color: $link-color;
 $modal-link-hover-color: $link-hover-color;
 
 // Make hierarchical arrangement of admin options more clear
-$secondary-legend-font-size: ceil(($font-size-base * 1.35));
+$secondary-legend-font-size: 1.35rem;
 
 // Plugin Pivot Table variables
 $pvt-color: $body-color;
